--- a/indexAboutUs.html
+++ b/indexAboutUs.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="csmain.css">
-    <link rel="stylesheet" href="csstylesAboutUs.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="stylesAboutUs.css">
     <link rel="icon" href="images\icon.png" type="image/icon type">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" />
     <title>burned nature</title>
