--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1><a href="/index.html"><i class="fas fa-leaf"></i> burned nature.</a></h1>
         <button class="burger" id="burger"><i class="fas fa-bars"></i></button>
         <ul>
-            <li><a class="select" href="/indexAboutBurn.html">Sobre as queimadas</a></li>
+            <li><a href="/indexAboutBurn.html">Sobre as queimadas</a></li>
             <li><a href="/indexWeather.html">Temperatura agora</a></li>
             <button class="about" onclick="window.location.href='/indexAboutUs.html';"><a href="/indexAboutUs.html">Sobre</a></button>
             <button class="contactus" onclick="window.location.href='/indexContactUs.html';" ><a href="/indexContactUs.html">Contate-nos</a></button>
